@@ -3,14 +3,23 @@ module Rails
     class Database
 
       class Sqlite
-        def initialize
-          Rails::Sequel::Database.connect
+        def initialize (env)
+          @env = env
+          @config = Database.configurations[@env]
+        end
+
+        def connect (options = {})
+          ::Sequel.connect(@config.merge(options))
         end
 
         def create_database (*args)
+          connect
+          puts 'Warning: sqlite file may not have been created until there are some operations on it'
         end
 
         def drop_database (*args)
+          dbfile = @config['database']
+          File.delete(dbfile) if File.exists?(dbfile)
         end
       end
 
